# grounded-visual-intelligence

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/article-01/: article.md  brief.md  comparison-protocol.md  evaluation.md  grounded-sam2-integration.md  hero-video.md  results.md  sam3-integration.md  web-demo.md
docs/article-01/linkedin/: README.md  feed-post.md  linkedin-article.md
notebooks/: article_01_grounded_sam2_colab.ipynb  article_01_sam3_colab.ipynb
scripts/: article_01_figures.py  article_01_linkedin_cover.py
src/gvi/: __init__.py  demo.py  models.py  run_artifacts.py  scene_memory.py  tool_contracts.py
src/gvi/adapters/: __init__.py  grounded_sam2.py  sam3.py
src/gvi/inference/: __init__.py  mask_rle.py  sam3_worker.py
tests/: test_grounded_sam2_adapter.py  test_mask_rle.py  test_sam3_adapter.py  test_sam3_worker.py  test_scene_memory.py
tests/fixtures/: grounded_sam2_tabletop_output.json  sam3_tabletop_output.json
web/: app.js  index.html  styles.css
web/data/: evidence.json
