[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "grounded-visual-intelligence"
version = "0.1.0"
description = "Evidence-grounded visual memory for video analysis and LLM tool use"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3",
]

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.9,<4",
  "numpy>=1.26,<3",
]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
gvi-demo = "gvi.demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gvi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

